# zpr-visaservice

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  admin-http-api.txt  config-example.yaml
.github/workflows/: visaservice.yml  vs-tools.yml  vs2.yml  zpt.yml
admin-api-types/: Cargo.toml  Makefile
admin-api-types/src/: admin_api_types.rs  lib.rs
core/: Makefile  go.mod  go.sum
core/cmd/vservice/: Makefile  README.md  example-config.yaml  main.go
core/pkg/actor/: actor.go  actor_test.go  authattr.go  authattr_test.go  keys.go
core/pkg/ip/: endpoint.go  endpoint_test.go  traffic.go  traffic_test.go
core/pkg/libvisa/: builder.go  crypto.go  datacap.go  datacap_test.go  expflags.go  keys.go  keys_test.go  pep.go  pep_test.go  time.go  vconfig.go  vconfig_test.go  zip.go
core/pkg/logr/: logger.go  testlogger.go  zaplogger.go
core/pkg/policy/: connectstate.go  const.go  constants.go  container.go  container_test.go  helpers.go  helpers_test.go  machine.go  machine_test.go  matched_policy.go  matcher.go  matcher_test.go  policy.go  policy_test.go  proc.go  servicemesh.go  servicemesh_test.go  settings.go
core/pkg/policy/testdata/: Makefile  ca-cert.pem  m3-full-access.zpl  m3-full-access.zplc  rsa-pub-key.pem  test-lhs-service.zpl  test-lhs-service.zplc  test-service-attrs.zpl  test-service-attrs.zplc
core/pkg/snauth/: certcollection.go  credid.go  crypto.go  fingerprint.go  fingerprint_test.go  jwt.go  jwt_test.go  rsa-helpers.go
core/pkg/tsapi/: protocol.go
core/pkg/vservice/: admin.go  admin_test.go  attrproxy.go  attrproxy_test.go  config.go  connectioncontrol.go  connectioncontrol_test.go  constants.go  service.go  service_configuration_test.go  support.go  vlog.go  vsinst-actordb.go  vsinst-core.go  vsinst-node.go  vsinst-policy.go  vsinst-thrift.go  vsinst-thrift_test.go  vsinst.go  vsinst_test.go  vss.go
core/pkg/vservice/adb/: actordb.go  actordb_test.go  pushbuffer.go
core/pkg/vservice/auth/: actorauthdb.go  actorauthdb_test.go  authenticator-rs.go  authenticator-rs_test.go  authenticator.go  authenticator_test.go  authservice-api.go  blob.go  blob_test.go  directory.go  directory_test.go  recovation.go
core/pkg/vservice/auth/testdata/: bas.zpr.org_key.pem  vs.zpr_key.pem
core/pkg/vservice/testdata/: Makefile  vsinst-test.zpl  vsinst-test.zplc
integration-test/: common_funcs.sh  vs-conform-test.sh  zpt-test-connect.sh  zpt-test.sh
integration-test/pregen/: Makefile  conform-adapter-vs-cert.pem  conform-node-cert.pem  conform-policy.zpl  conform-policy.zplc  conform-vs-config.yaml  zpr-rsa-cert.pem  zpr-rsa-key.pem  zpt-test-connect.zpt  zpt-test.bin2  zpt-test.zpl  zpt-test.zplc  zpt-test.zpt
integration-test/pregen/include/: bas-tls.crt  node-private-key.pem  node-public-key.pem
libeval/: Cargo.toml  Makefile  README.md
libeval/src/: actor.rs  attribute.rs  error.rs  eval.rs  eval_result.rs  eval_route.rs  joinpolicy.rs  lib.rs  logging.rs  packet.rs  pio.rs  policy.rs  route.rs  visa.rs  zpr_policy.rs
libeval/test-data/: Makefile  test-keys.bin2  test-keys.zpl  test-keys.zplc
libeval/test-data/include/: key1-pub.pem  key1.pem  key2-pub.pem  key2.pem  key3-pub.pem  key3.pem
libeval/tests/zpl/: Makefile  basic.bin2  basic.zpl  basic.zplc  test-signal.bin2  test-signal.zpl  test-signal.zplc
mods/: Makefile
mods/polio/: Makefile  Makefile.pb  go.mod  policy.pb.go  policy.proto
mods/snio/: Makefile  go.mod  go.sum
mods/snio/zds2/: zds.proto
tools/: bump-version.sh  set_zpr_common_version  sysinfo  zpr-pki
vs/: AGENTS.md  Cargo.toml  Makefile  README.md  vs.toml
vs-admin/: Cargo.toml  Makefile  README.md
vs-admin/src/: apitypes.rs  error.rs  executor.rs  generate_completions.rs  gui.rs  main.rs  main_args.rs  vsclient.rs
vs-client/: .gitignore  Cargo.toml  Makefile  README.md
vs-client/src/: main.rs  traffic_parser.rs  vsclient.rs  vssd.rs
vs-conform/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
vs-conform/pkg/mocks/: node.go  plogger.go  vss.go
vs-conform/pkg/packets/: generator.go
vs-conform/pkg/plc/: policyutils.go
vs-conform/pkg/testfw/: api.go  registry.go  runresult.go  scorecard.go  state.go  suite.go
vs-conform/pkg/tests/: acceptvalidauth.go  admindeletevisa.go  admindeletevisabycn.go  adminlistvisas.go  authorizeconnect.go  checkchallenge.go  emptyauthsvclist.go  getcurrentpolicy.go  helloreps.go  helpers.go  rejectinvalidauth.go  visarequest.go
vs-conform/pkg/vsadmin/: client.go
vs-conform/pkg/zcrypt/: hmac.go  pem.go
vs-dt/: Cargo.toml  Makefile
vs-dt/src/: error.rs  lib.rs  packet.rs  vsapi_types.rs
vs/src/: actor.rs  actor_db.rs  actor_mgr.rs  admin_apikeys.rs  admin_service.rs  apikey.rs  assembly.rs  auth.rs  config.rs  connection_control.rs  counters.rs  cparam.rs  db.rs  db_worker.rs  error.rs  event_mgr.rs  lib.rs  logging.rs  main.rs  net_mgr.rs  packet.rs  pio.rs  policy.rs  policy_db.rs  policy_mgr.rs  router.rs  signal_worker.rs  test_helpers.rs  visa_mgr.rs  visareq_worker.rs  vsapi_worker.rs  vss_mgr.rs  zpr.rs
vs/src/db/: actor.rs  db_fake.rs  db_redis.rs  mod.rs  node.rs  policy.rs  visa.rs
zpt/: Cargo.toml  Makefile  README.md
zpt/src/: error.rs  main.rs  out.rs  parser.rs  pio.rs  repl.rs  zmachine.rs
zpt/test-data/: test-signal.bin2  test-signal.zpl  test-signal.zplc  test-signal.zpt
