# zpr-visaservice
[workspace]
resolver = "3"
members = ["vs", "libeval", "zpt", "vs-admin", "admin-api-types"]

[workspace.dependencies]
zpr = { git = "https://github.com/org-zpr/zpr-common.git", tag = "v0.8.0", features = ["vsapi", "policy"]}
capnp-rpc = "0.25.0"
capnp = { version = "0.25.0", features = ["sync_reader"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
openssl = "0.10.74"
rand = "0.9.2"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

