# zpr-visaservice
[workspace]
resolver = "3"
members = ["vs", "libeval", "zpt", "vs-admin", "admin-api-types"]

[workspace.dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
capnp = { version = "0.25.0", features = ["sync_reader"] }
capnp-rpc = "0.25.0"
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
openssl = "0.10.74"
rand = "0.9.2"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.18.0", default-features = false, features = ["std", "macros", "base64", "chrono"] }
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
zpr = { git = "https://github.com/org-zpr/zpr-common.git", tag = "v0.12.0", features = ["vsapi", "policy"]}

