[package]
name = "libeval"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Packet/Actor evaluator library; a component of the ZPR visa service"

[dependencies]
capnp.workspace = true
zpr.workspace = true
serde.workspace = true
bytes = "1.10.1"
enumset = "1.1.10"
openssl = "0.10.74"
thiserror = "2.0.16"
tracing = "0.1.41"

[dev-dependencies]
tracing-subscriber = "0.3.20"
