[package]
name = "libeval"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Packet/Actor evaluator library; a component of the ZPR visa service"

[dependencies]
capnp.workspace = true
zpr.workspace = true
serde.workspace = true
bytes.workspace = true
enumset = "1.1.10"
openssl.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
