[package]
name = "vs-admin"
version = "0.7.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.29.0"
flate2 = "1.0.34"
futures-io = "0.3.31"
ratatui = "0.29.0"
reqwest = { version = "0.12.8", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zpr = { git = "https://github.com/org-zpr/zpr-common.git", tag = "v0.7.2", features = ["vsapi"]}
admin-api-types = { path = "../admin-api-types" }
clap_complete = { version = "4.5.57", optional = true}
thiserror = "2.0.18"
url = "2.5.8"

[features]
complete = ["clap_complete"]

[[bin]]
name = "vs-admin"
path = "src/main.rs"

[[bin]]
name = "generate_completions"
path = "src/generate_completions.rs"
required-features = ["complete"]
