[package]
name = "vs-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
etherparse = "0.15.0"
hex = "0.4.3"
openssl = "0.10.70"
rand = "0.8.5"
regex = "1.10.5"
thrift = "0.17.0"
libnode = { path = "../../libnode" }
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

