[package]
name = "vs"
version = "0.1.0"
edition = "2024"

[dependencies]
capnp-rpc.workspace = true
capnp.workspace = true
zpr.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = { version = "0.8.6", features = ["macros"] }
clap = { version = "4.5.50", features = ["derive"] }
futures-util = "0.3.31"
hyper = "1.7.0"
hyper-util = "0.1.17"
libeval = { path = "../libeval" }
openssl = "0.10.74"
redis = { version = "1.0.3", features = ["tokio-comp", "aio", "connection-manager"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "test-util"] }
rustls-pemfile = "2"
toml = "0.9.8"
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
admin-api-types = { path = "../admin-api-types" }
tokio-util = { version = "0.7.16", features = ["compat"] }
tokio-rustls = "0.26.4"
rustls = "0.23.36"
rcgen = "0.14.7"
arc-swap = "1.7.1"
bytes = "1.10.1"
ipnet = "2.11.0"
tokio-stream = "0.1.17"
futures = "0.3.31"
dashmap = "6.1.0"
hex = "0.4.3"
chrono = "0.4.42"
percent-encoding = "2.3.2"
http = "1.4.0"
http-body-util = "0.1.3"
async-trait = "0.1.89"
regex = "1.12.2"
base64 = "0.22.1"
rand = "0.9.2"
enum-map = "2.7.3"

[dev-dependencies]
tower = "0.5.3"
