[package]
name = "vs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vsapikey"
path = "src/bin/vsapikey.rs"

[dependencies]
admin-api-types = { path = "../admin-api-types" }
arc-swap = "1.7.1"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
base64.workspace = true
bytes.workspace = true
capnp.workspace = true
capnp-rpc.workspace = true
chrono.workspace = true
clap.workspace = true
dashmap = "6.1.0"
enum-map = "2.7.3"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = "1.7.0"
hyper-util = "0.1.17"
ipnet = "2.11.0"
libeval = { path = "../libeval" }
openssl.workspace = true
percent-encoding = "2.3.2"
rand.workspace = true
rcgen = "0.14.7"
redis = { version = "1.0.3", features = ["tokio-comp", "aio", "connection-manager"] }
regex = "1.12.2"
rustls = "0.23.36"
rustls-pemfile = "2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.48.0", features = ["full", "test-util"] }
tokio-rustls = "0.26.4"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["compat"] }
toml = "0.9.8"
tower-service = "0.3.3"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.22.0", features = ["v4"] }
zpr.workspace = true

[dev-dependencies]
tower = "0.5.3"
