[package]
name = "zpt"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Command line tool for interacting with the visa service evaluator library"

[dependencies]
capnp.workspace = true
zpr.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes = "1.10.1"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive", "env"] }
colored = "3.0.0"
libeval = { path = "../libeval" }
rand = "0.9.2"
rustyline = "17.0.2"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

