[package]
name = "zpt"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Command line tool for interacting with the visa service evaluator library"

[dependencies]
capnp.workspace = true
zpr.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
colored = "3.0.0"
libeval = { path = "../libeval" }
rand.workspace = true
rustyline = "17.0.2"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

