[package]
name = "zpt"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Command line tool for interacting with the visa service evaluator library"

[dependencies]
bytes.workspace = true
capnp.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
colored.workspace = true
libeval = { path = "../libeval" }
rand.workspace = true
rustyline = "17.0.2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zpr.workspace = true

